[gd_scene load_steps=4 format=3 uid="uid://csm0uwxqwgudx"]

[ext_resource type="Script" uid="uid://cmwedgwiuxv78" path="res://scripts/weekly_report.gd" id="1_ec7a8"]
[ext_resource type="FontFile" uid="uid://b2kv35js2pjin" path="res://assets/font/Stacked pixel.ttf" id="1_qa6uf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ec7a8"]
bg_color = Color(0.133196, 0.133196, 0.133196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="weekly_report" type="CanvasLayer"]
script = ExtResource("1_ec7a8")

[node name="BG_weekly_report" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -607.5
offset_top = -355.5
offset_right = 607.5
offset_bottom = 355.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ec7a8")

[node name="island_report" type="Label" parent="BG_weekly_report"]
layout_mode = 0
offset_left = 76.0
offset_top = 113.0
offset_right = 1142.0
offset_bottom = 616.0
text = "s"

[node name="confirm_button" type="Button" parent="BG_weekly_report"]
layout_mode = 0
offset_left = 228.5
offset_top = 630.5
offset_right = 1022.5
offset_bottom = 677.5
theme_override_fonts/font = ExtResource("1_qa6uf")
theme_override_font_sizes/font_size = 40
text = "Confirm"

[node name="title" type="Label" parent="BG_weekly_report"]
layout_mode = 0
offset_left = 234.5
offset_top = 22.5
offset_right = 964.5
offset_bottom = 64.5
theme_override_fonts/font = ExtResource("1_qa6uf")
theme_override_font_sizes/font_size = 40
text = "s"
